added legal.html and updated README.md and index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <div id="eventGrid" class="zine-grid"></div>
     </main>
 
+    <footer class="container text-center py-5 border-top border-dark mt-5">
+        <p><a href="legal.html" class="text-dark fw-bold text-uppercase" style="letter-spacing: 1px;">Legal Policy</a></p>
+        <p class="mb-1">Built by <a href="https://macondolabs.com" target="_blank" class="text-dark fw-bold">Macondo Labs</a></p>
+        <p>contact at macondolabs.com</p>
+    </footer>
+
     <!-- Event Detail Modal -->
     <div class="modal fade" id="eventModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-lg">
